--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "@mdi/js": "^3.3.92",
     "@mdi/react": "^1.1.0",
     "animated-scroll-to": "^1.1.7",
+    "axios": "^0.19.0",
     "email-validator": "^2.0.4",
     "express": "^4.16.2",
     "fs": "0.0.1-security",
     "guac-hoc": "^0.1.0",
     "mongodb": "^3.1.10",
     "qrcode.react": "^0.9.3",
+    "query-string": "^6.8.3",
     "react": "^16.2",
     "react-dom": "^16.2",
     "react-lazy-load": "^3.0.12",
+    "react-qr-code": "^0.1.3",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -32,6 +35,7 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "url-loader": "^1.1.1",
+    "url-parse": "^1.4.7",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
